--- a/GNUmakefile.in
+++ b/GNUmakefile.in
@@ -66,7 +66,7 @@ ifeq ($(PROFILE),1)
 OPTFLAGS += -g -pg -fno-inline
 endif
 
-PROGRAMS = concurrent singleelems list1 pqueue rbtree trans_test ht_mt pqVsIt single predicates ex-counter $(UNIT_PROGRAMS)
+PROGRAMS = concurrent pqueue rbtree trans_test ht_mt pqVsIt single predicates ex-counter $(UNIT_PROGRAMS)
 UNIT_PROGRAMS = unit-tarray unit-tintpredicate unit-tcounter unit-tbox unit-tgeneric unit-rcu unit-tvector unit-tvector-nopred
 
 all: $(PROGRAMS)
